--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "net.bytebuddy:byte-buddy:1.14.5"
+    implementation 'org.springframework.retry:spring-retry:2.0.3'
 
     // Тестови зависимости
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
