--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ repositories {
     maven { url 'https://repo.spring.io/milestone' }
 }
 
+// Тук дефинираме ext property
+ext {
+    springCloudVersion = "2025.0.0"
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -38,9 +43,14 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'io.github.openfeign:feign-jackson:12.3'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "net.bytebuddy:byte-buddy:1.14.5"
     implementation 'org.springframework.retry:spring-retry:2.0.3'
+
 
     // Тестови зависимости
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -56,6 +66,12 @@ dependencies {
 
     // За DevTools в разработка
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.3" // вместо 2024.x
+    }
 }
 
 configurations.configureEach {
