make server accepts requests in virtual threads

--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,13 @@ configurations.configureEach {
     }
 }
 
+tasks.named('bootRun') {
+    jvmArgs = [
+            "-Djdk.virtualThreadScheduler.parallelism=8",
+            "-Djdk.virtualThreadScheduler.maxPoolSize=8"
+    ]
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
