--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.show-sql=true
 #JPA Properties
 spring.jpa.properties.hibernate.format_sql = TRUE
 
+#Virtual Threads
+spring.threads.virtual.enabled=true
+
+
 ###Logging Levels
 # Disable the default loggers
 logging.level.org = WARN
