--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation "net.bytebuddy:byte-buddy:1.14.5"
     implementation 'org.springframework.retry:spring-retry:2.0.3'
 
+    implementation 'org.jsoup:jsoup:1.17.2'
 
 //    implementation 'org.hibernate.commons:hibernate-commons-annotations:6.0.6.Final'
 
